--- a/public/css/glyphicons-align.css
+++ b/public/css/glyphicons-align.css
@@ -19,3 +19,7 @@
   .right-aling-glyphicon-logout{
     margin-left:118px;
   }
+
+  .right-aling-glyphicon-hide-menu {
+    margin-left: 64px;
+  }
