--- a/public/css/masterPage.css
+++ b/public/css/masterPage.css
@@ -1,3 +1,5 @@
+
+
 #wrapper {
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
@@ -172,10 +174,23 @@ nav.navbar{
     border:0px !important;
   }
 
+
+
   .main-footer{ 
-    height: 50px; 
-    background:#C6C6C9; 
-    width:100%; 
-    position:fixed; 
-    bottom:0px; 
+    width: 100%;
+    position: fixed;
+    bottom: 0 !important;
+    background-color: #DEDEE3;
+    border-top: 1px solid #d2d6de;
+    text-align:center;
+  }
+
+
+
+  .sidebar-nav .closebtn {
+
+    position: static;
+    top: 0;
+    margin-right: 200px;
+    font-size: 36px;
   }
