--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,7 +60,7 @@ nav.sidebar, .main {
 
 @media screen and (max-width: 700px) {
   .sidebar {
-    width: 100%;
+    width: 100%  !important;
     height: auto;
     position: relative;
   }  
