--- a/public/css/master-root.css
+++ b/public/css/master-root.css
@@ -126,3 +126,37 @@ nav.nav-color {
       display:none;
     }
   }
+
+  .style-return-button{
+    margin-left:40px; 
+    border-radius: 12px !important; 
+    background-color:#333333 !important;
+    border-color:#333333 !important;
+    color: white;
+    box-shadow: none !important;
+    
+  }
+
+  .style-return-button:focus {
+    outline: none !important;
+  }
+
+
+  .style-return-button:hover {
+   
+    border-color:white !important;
+    color: white;
+  }
+
+  .style-name-button {
+    background-color:#96183a !important; 
+    border:0px; 
+    color:#FFFFFF; 
+    box-shadow: none !important;
+  }
+
+  .style-name-button:hover {
+   
+    border-color:white !important;
+    color: white;
+  }
