--- a/public/css/login.css
+++ b/public/css/login.css
@@ -480,7 +480,7 @@ input.input100 {
 }
 
 /*---------------------------------------------*/
-/*
+
 .focus-input100 {
   position: absolute;
   display: block;
@@ -489,7 +489,7 @@ input.input100 {
   top: -1px;
   left: -1px;
   pointer-events: none;
-  border: 1px solid #6675df;
+  /*border: 1px solid #6675df;*/
   border-radius: 10px;
 
   visibility: hidden;
@@ -536,7 +536,7 @@ input.input100 {
 .input100:focus + .focus-input100 + .label-input100 {
   top: 14px;
   font-size: 13px;
-}*/
+}
 
 .has-val {
   height: 48px !important;
@@ -595,7 +595,7 @@ input.input100 {
 /*------------------------------------------------------------------
 [ Responsive ]*/
 
-@media (max-width: 902px) {
+@media (max-width: 708px) {
   .login100-form {
     width: 50%;
     padding-left: 30px;
@@ -607,13 +607,14 @@ input.input100 {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 708px) {
   .login100-form {
     width: 100%;
   }
 
   .login100-more {
     display: none;
+    width: 100%;
   }
 }
 
@@ -621,7 +622,7 @@ input.input100 {
   .login100-form {
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 70px;
+    padding-top: 10px;
   }
 }
 
