--- a/public/css/login.css
+++ b/public/css/login.css
@@ -368,6 +368,9 @@ iframe {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
+  display: -o-flex;
+  display: -o-box;
+  display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
@@ -432,6 +435,9 @@ iframe {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
+  display: -o-flex;
+  display: -o-box;
+  display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
@@ -554,6 +560,9 @@ input.input100 {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
+  display: -o-flex;
+  display: -o-box;
+  display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
@@ -564,6 +573,9 @@ input.input100 {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
+  display: -o-flex;
+  display: -o-box;
+  display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
   justify-content: center;
