--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,150 +1,4 @@
-/*.bg-color {
-    background-image: url("/Imagenes/humo.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-}
 
-@media (min-width: 550px) {
-    .col-sm-5 {
-        height:calc(100%-60px);
-        background-color: rgba(255, 255, 255, 0.9);
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        display: block;
-        max-width: 640px;
-    }
-}
-
-@media (max-width: 550px) {
-    .col-sm-5 {
-        height:calc(100%-60px);
-        background-color: rgba(255, 255, 255, 0.8);
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        display: block;
-        /*max-width: 440px;*/
-    /*}
-}
-
-@media (max-width: 400px) {
-    .col-sm-5 {
-        height:100%;
-        background-color: rgba(255, 255, 255, 1);
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        display: block;
-        /*max-width: 440px;*/
-    /*}
-}
-
-.button{
-    padding: 7px 14px;
-    font-size: 10px;
-    border-radius: 4px;
-    border: none;
-    width: 100%;
-    background-color: #96183a;
-    color: white;
-}
-
-a{
-    text-decoration: underline;
-    text-align: center !important;
-    display:block;
-}
-
-
-    .responsive-login-text {
-    font-size: 20px;
-    } 
-    .responsive-login-forgot-password {
-        font-size: 14px;
-    } 
-    input[type="text"] {
-        font-size: 14px;
-    }
-    input[type="password"] {
-        font-size: 14px;
-      }
-  
-
-
-      .login100-form-title {
-        width: 100%;
-        position: relative;
-        z-index: 1;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        align-items: center;
-      
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-      
-        padding: 70px 15px 74px 15px;
-      }
-      
-      .login100-form-title-1 {
-        font-family: Poppins-Bold;
-        font-size: 30px;
-        color: #fff;
-        text-transform: uppercase;
-        line-height: 1.2;
-        text-align: center;
-      }
-      
-      .login100-form-title::before {
-        content: "";
-        display: block;
-        position: absolute;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background-color: rgba(54,84,99,0.6);
-      }
-      
-      
-      /*==================================================================
-      [ Form ]*/
-      /*
-      .login100-form {
-        width: 100%;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 43px 170px 93px 190px;
-      }
-
-*/
-
-
-
-
-
-
-
-
-
-
-
-
-      
 
 
 
@@ -202,7 +56,7 @@ body, html {
 }
 
 /*---------------------------------------------*/
-/*a {
+a {
 	font-family: Poppins-Regular;
 	font-size: 14px;
 	line-height: 1.7;
@@ -221,14 +75,14 @@ a:focus {
 a:hover {
 	text-decoration: none;
   color: #6675df;
-}*/
+}
 
 /*---------------------------------------------*/
-/*h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h4,h5,h6 {
 	margin: 0px;
-}*/
+}
 
-/*p {
+p {
 	font-family: Poppins-Regular;
 	font-size: 14px;
 	line-height: 1.7;
@@ -240,7 +94,7 @@ ul, li {
 	margin: 0px;
 	list-style-type: none;
 }
-*/
+
 
 /*---------------------------------------------*/
 input {
@@ -248,21 +102,21 @@ input {
 	border: none;
 }
 
-/*textarea {
+textarea {
   outline: none;
   border: none;
 }
 
 textarea:focus, input:focus {
   border-color: transparent !important;
-}*/
+}
 
 input:focus::-webkit-input-placeholder { color:transparent; }
 input:focus:-moz-placeholder { color:transparent; }
 input:focus::-moz-placeholder { color:transparent; }
 input:focus:-ms-input-placeholder { color:transparent; }
 
-/*textarea:focus::-webkit-input-placeholder { color:transparent; }
+textarea:focus::-webkit-input-placeholder { color:transparent; }
 textarea:focus:-moz-placeholder { color:transparent; }
 textarea:focus::-moz-placeholder { color:transparent; }
 textarea:focus:-ms-input-placeholder { color:transparent; }
@@ -276,7 +130,7 @@ textarea::-webkit-input-placeholder { color: #999999;}
 textarea:-moz-placeholder { color: #999999;}
 textarea::-moz-placeholder { color: #999999;}
 textarea:-ms-input-placeholder { color: #999999;}
-*/
+
 
 label {
   display: block;
@@ -304,7 +158,7 @@ iframe {
 /*==================================================================
 [ Text ]*/
 .txt1 {
-  /*font-family: Montserrat-Regular;*/
+  font-family: Montserrat-Regular;
   font-size: 13px;
   line-height: 1.4;
   color: #555555;
@@ -349,9 +203,6 @@ iframe {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
-  display: -o-flex;
-  display: -o-box;
-  display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
@@ -385,7 +236,7 @@ iframe {
   background-position: center;
   position: relative;
   z-index: 1;
-  -webkit-clip-path: polygon(0px 100%,645px 100%,100% 0px,0px 0px);
+  -webkit-clip-path: polygon(2px 100%,445px 100%,100% 0px,0px 0px);
 }
 
 .login100-more::before {
@@ -410,7 +261,7 @@ iframe {
   min-height: 100vh;
   display: block;
   background-color: #ffffff;
-  padding: 13px 55px 55px 55px;
+  padding: 173px 55px 55px 55px;
 }
 
 .login100-form-title {
@@ -439,6 +290,7 @@ iframe {
   width: 100%;
   height: 80px;
   position: relative;
+  border: 1px solid #e6e6e6;
   border-radius: 10px;
   margin-bottom: 10px;
 }
@@ -448,12 +300,15 @@ iframe {
   font-size: 18px;
   color: #999999;
   line-height: 1.2;
+
   display: block;
+  position: absolute;
   pointer-events: none;
   width: 100%;
   padding-left: 24px;
   left: 0;
   top: 30px;
+
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
@@ -489,7 +344,7 @@ input.input100 {
   top: -1px;
   left: -1px;
   pointer-events: none;
-  /*border: 1px solid #6675df;*/
+  border: 1px solid #6675df;
   border-radius: 10px;
 
   visibility: hidden;
@@ -547,6 +402,58 @@ input.input100 {
   font-size: 13px;
 }
 
+/*==================================================================
+[ Restyle Checkbox ]*/
+
+.input-checkbox100 {
+  display: none;
+}
+
+.label-checkbox100 {
+  font-family: Poppins-Regular;
+  font-size: 13px;
+  color: #999999;
+  line-height: 1.4;
+
+  display: block;
+  position: relative;
+  padding-left: 26px;
+  cursor: pointer;
+}
+
+.label-checkbox100::before {
+  content: "\f00c";
+  font-family: FontAwesome;
+  font-size: 13px;
+  color: transparent;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border-radius: 2px;
+  background: #fff;
+  border: 1px solid #6675df;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.input-checkbox100:checked + .label-checkbox100::before {
+  color: #6675df;
+}
+
+
 /*------------------------------------------------------------------
 [ Button ]*/
 .container-login100-form-btn {
@@ -572,12 +479,13 @@ input.input100 {
   width: 100%;
   height: 50px;
   border-radius: 10px;
-  background: #96183a;
+  background: #6675df;
 
-  /*font-family: Montserrat-Bold;*/
+  font-family: Montserrat-Bold;
   font-size: 12px;
   color: #fff;
   line-height: 1.2;
+  text-transform: uppercase;
   letter-spacing: 1px;
 
   -webkit-transition: all 0.4s;
@@ -595,7 +503,7 @@ input.input100 {
 /*------------------------------------------------------------------
 [ Responsive ]*/
 
-@media (max-width: 708px) {
+@media (max-width: 992px) {
   .login100-form {
     width: 50%;
     padding-left: 30px;
@@ -607,14 +515,13 @@ input.input100 {
   }
 }
 
-@media (max-width: 708px) {
+@media (max-width: 768px) {
   .login100-form {
     width: 100%;
   }
 
   .login100-more {
     display: none;
-    width: 100%;
   }
 }
 
@@ -622,62 +529,9 @@ input.input100 {
   .login100-form {
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 10px;
+    padding-top: 70px;
   }
 }
-
-/*[ Transition ]
------------------------------------------------------------
-*/
-.trans-0-1 {
-	-webkit-transition: all 0.1s;
-    -o-transition: all 0.1s;
-    -moz-transition: all 0.1s;
-    transition: all 0.1s;
-}
-.trans-0-2 {
-	-webkit-transition: all 0.2s;
-    -o-transition: all 0.2s;
-    -moz-transition: all 0.2s;
-    transition: all 0.2s;
-}
-.trans-0-3 {
-	-webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-}
-.trans-0-4 {
-	-webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    transition: all 0.4s;
-}
-.trans-0-5 {
-	-webkit-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    transition: all 0.5s;
-}
-.trans-0-6 {
-	-webkit-transition: all 0.6s;
-    -o-transition: all 0.6s;
-    -moz-transition: all 0.6s;
-    transition: all 0.6s;
-}
-.trans-0-9 {
-	-webkit-transition: all 0.9s;
-    -o-transition: all 0.9s;
-    -moz-transition: all 0.9s;
-    transition: all 0.9s;
-}
-.trans-1-0 {
-	-webkit-transition: all 1s;
-    -o-transition: all 1s;
-    -moz-transition: all 1s;
-    transition: all 1s;
-}
-
 
 
 /*------------------------------------------------------------------
@@ -749,3 +603,19 @@ input.input100 {
   }
 }
 
+
+
+/*==================================================================
+[ Social ]*/
+.login100-form-social-item {
+  width: 36px;
+  height: 36px;
+  font-size: 18px;
+  color: #fff;
+  border-radius: 50%;
+}
+
+.login100-form-social-item:hover {
+  background: #333333;
+  color: #fff;
+}
