--- a/public/css/master-root.css
+++ b/public/css/master-root.css
@@ -213,3 +213,15 @@ nav.nav-color {
     background-color:#333333 !important;
     border-color:#333333 !important;
   }
+
+  .style-btn-solve {
+    background-color:#333333 !important;
+    color:white !important;
+    width:80px;
+    border:0px !important;
+    margin-top:3px;
+  }
+
+  .style-btn-solve:hover {
+    cursor: no-drop !important;
+  }
