--- a/public/css/master-root.css
+++ b/public/css/master-root.css
@@ -225,3 +225,15 @@ nav.nav-color {
   .style-btn-solve:hover {
     cursor: no-drop !important;
   }
+
+  .style-btn-delete-visit {
+    background-color:#9D9D9D !important;
+    color:white !important;
+    width:67px;
+    border:0px !important;
+    margin-top:3px;
+  }
+
+  .style-btn-delete-visit:hover {
+    cursor: no-drop !important;
+  }
