--- a/public/css/master-root.css
+++ b/public/css/master-root.css
@@ -271,3 +271,7 @@ nav.nav-color {
     max-height:166px !important; 
     overflow-y: auto !important;
   }
+
+  .not-allowed:hover {
+    cursor: not-allowed !important;
+  }
